# WF

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  pyrefly.toml  ruff.toml  uv.toml
backend/: Dockerfile  alembic.ini  alembic_check.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/alembic/: env.py
backend/alembic/alembic/versions/: v0.py  v1.py  v2.py  v3.py  v4.py  v5.py  v6.py  v7.py
backend/alembic/versions/: 00dc02f9e20f_update_20251130_200749.py
backend/app/: __main__.py  auth.py  database.py
backend/app/models/: diet.py  exercise.py  exercise_progress.py  food.py  food_meal.py  meal.py  routine.py  routine_exercise.py  user.py
backend/app/routers/: auth.py  diets.py  exercises.py  food.py  meal.py  routines.py  routines_exercises.py
backend/tools/: alembic_manual_check.py
backend/tools/alembic/versions/: v0.py
frontend/: Caddyfile  Dockerfile  angular.json  package-lock.json
frontend/security/: certificate  private-key
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.css  app.routes.ts  auth-interceptor.ts
frontend/src/app/dashboard/: dashboard.css  dashboard.html  dashboard.ts
frontend/src/app/dashboard-admin/: dashboard-admin.css  dashboard-admin.html
frontend/src/app/login/: login.css  login.html  login.ts
frontend/src/app/register/: register.css  register.html  register.ts
frontend/src/app/service/: auth.service.ts  user.ts
tools/: generate-openapi.py
wf-frontend/: index.html  package-lock.json  package.json
wf-frontend/src/: App.vue  main.js
wf-frontend/src/api/: axios.js
wf-frontend/src/assets/: Login.css
wf-frontend/src/router/: index.js
wf-frontend/src/stores/: userStore.js
wf-frontend/src/views/: Home.vue  Login.vue  Register.vue  UserDashboard.vue
