[project]
name = 'backend'
version = '1.0.0'
requires-python = '>=3.12'
dependencies = [
    'sqlalchemy~=2.0.44',
    'fastapi~=0.120.2',
    "passlib~=1.7.4",
    "python-jose~=3.5.0",
    "uvicorn~=0.38.0",
    "python-multipart~=0.0.20",
    "psycopg2-binary~=2.9.11",
    "bcrypt~=4.3.0",
]
optional-dependencies = { }

description = 'Project description'
authors = [
    { name = 'Name Surname', email = 'email@site.com' }
]
maintainers = []

license = 'MIT'
#license-files = ['LICENSE.md']
#readme = 'README.md'

keywords = []
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

[project.urls]
Homepage = 'https://module.com'
Documentation = 'https://readthedocs.org/module'
Repository = 'https://github.com/user/module.git'
Issues = 'https://github.com/user/module/issues'
Changelog = 'https://github.com/user/module/blob/master/CHANGELOG.md'
Download = 'https://github.com/user/module/release/v0.0.0'

[project.scripts]
#:null:

[project.gui-scripts]
#:null:


[build-system]
requires = ['uv_build~=0.9.5']
build-backend = 'uv_build'


[dependency-groups]
dev = [
    'pre-commit~=4.3.0',
    'openapi-generator-cli~=7.17.0',
    { include-group = 'lint' },
    { include-group = 'test' },
    { include-group = 'openapi-generator' },
]
lint = ['ruff~=0.14.2', 'pyrefly~=0.39.1']
test = ['pytest~=8.4.2']
openapi-generator = [
    'openapi-generator-cli~=7.17.0',
    'jdk4py~=21.0.8',
]


[tool.uv]
conflicts = []
default-groups = []
#:deprecated: dev-dependencies = []
environments = []
managed = true
package = true
required-environments = []
sources = { }

[tool.uv.dependency-groups]
#:null:

[tool.uv.build-backend]
data = { }
default-excludes = true
module-name = 'app'
module-root = 'backend'
namespace = false
source-exclude = []
source-include = []
wheel-exclude = []

[tool.uv.workspace]
exclude = []
members = []
